what's inside block

--- a/app/views/layouts/pages.html.haml
+++ b/app/views/layouts/pages.html.haml
@@ -5,6 +5,8 @@
       %h1
         = @page_title
 .contents
+  .r_column
+    =render :partial => "common/whats_inside"
   .page
     .page_border
       %br
