--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -319,6 +319,7 @@ Div.separator
   padding: 10px
   width: 220px
   background-color: #fcf6df
+  align: center
   img
     border-top: 4px solid #ffcc00
   a
@@ -329,7 +330,7 @@ Div.separator
     display: block
     background-color: #669999
     color: white
-
+    text-align: center
 //****************************
 //* footer*
 
