--- a/app/views/pages/about.html.haml
+++ b/app/views/pages/about.html.haml
@@ -1,2 +1,5 @@
-%p= I18n.t(:about_us_page_1, :ba_link => link_to(I18n.t(:ba_name), I18n.t(:ba_home_page_link), :target => "_blank")).html_safe
-%p= I18n.t(:about_us_page_2)
+.page
+  .page_border
+    %br
+    %p= I18n.t(:about_us_page_1, :ba_link => link_to(I18n.t(:ba_name), I18n.t(:ba_home_page_link), :target => "_blank")).html_safe
+    %p= I18n.t(:about_us_page_2)
