--- a/app/views/books/_right_column.html.haml
+++ b/app/views/books/_right_column.html.haml
@@ -1,12 +1,18 @@
 .box_1
   %h3= I18n.t(:tagged_species_caps)
   %ul
-  - list_names(@search_criteria).first(TAGGED_SPECIES_COUNT).each do |name|
-    %li
-      =link_to "#{name[:name]} [#{name[:count]}]", "#"
+    - list_names(@search_criteria).first(TAGGED_SPECIES_COUNT).each do |name|
+      %li
+        =link_to "#{name[:name]} [#{name[:count]}]", "#"
 .box_1
   %h3= I18n.t(:languages_caps)
   %ul
-  - list_languages(@search_criteria).first(TAGGED_SPECIES_COUNT).each do |language|
-    %li
-      =link_to "#{language[:name]} [#{language[:count]}]", "#"
+    - list_languages(@search_criteria).first(TAGGED_LANGUAGES_COUNT).each do |language|
+      %li
+        =link_to "#{language[:name]} [#{language[:count]}]", "#"
+.box_1
+  %h3= I18n.t(:authors_caps)
+  %ul
+    - list_authors(@search_criteria).first(TAGGED_AUTHORS_COUNT).each do |author|
+      %li
+        =link_to "#{author[:name]} [#{author[:count]}]", "#"
