code cleaning for right blocks

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -717,3 +717,9 @@ li.current
     font-style: italic
 
 //***************************Gallery End******************************************
+//***************************Geographics******************************************
+#location_checkbox
+  text-align: center
+  font-weight: normal
+  font-size: 12px
+//***************************Geographics End******************************************
