--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -38,5 +38,4 @@
         %a{ :href => "#" }
           = I18n.t(:names_link)
         |
-        %a{ :href => "#" }
-          = I18n.t(:geographics_link)
+        = link_to I18n.t(:geographics_link), {:controller => :geographics, :action => :index}
