--- a/app/views/geographics/index.html.haml
+++ b/app/views/geographics/index.html.haml
@@ -1,1 +1,5 @@
-<h1>Geographics#index</h1>
+= raw Cartographer::Header.new.to_s
+= raw @map.to_html
+#map{ :style => "width:980px;height:600px;" }
+  [map]
+  
