--- a/app/views/geographics/show.html.haml
+++ b/app/views/geographics/show.html.haml
@@ -4,3 +4,5 @@
   - @books.each do |key, value|
     %li
       =link_to value, "/books/#{key}"
+- if @books_count > 10
+  = link_to I18n.t(:geo_show_all_titles), "#" # TODO: Link this page to search results
