--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,7 @@
     %link{ :href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon" }
     
     = stylesheet_link_tag 'main'
+    = javascript_include_tag "application"
   %body
     .header
       %a{ :href => "/" } 
@@ -38,4 +39,4 @@
         %a{ :href => "#" }
           = I18n.t(:names_link)
         |
-        = link_to I18n.t(:geographics_link), {:controller => :geographics, :action => :index}
+        = link_to I18n.t(:geographics_link), {:controller => :geographics, :action => :index, :range => ""}
