--- a/app/views/names/index.html.haml
+++ b/app/views/names/index.html.haml
@@ -18,8 +18,8 @@
         %td
           #h_container{:style => "height: 250px; width: 100%; overflow: auto", :class => "tree"}
           
-            
 .r_column
   .box_1
     #namedetail
-      Select species on the left to view the details
+      %br
+      = I18n.t(:select_species_for_details)
