--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -126,6 +126,15 @@ div
 .pagetitle form
   float: right
 
+.search
+  background-color: #6F9F9F
+  border: 1px solid black
+  color: white
+  font-size: 12px
+  font-weight: normal
+  margin-left: 5px
+  padding: 2px 5px
+  text-decoration: none
 //*********** Tabs**********
 
 .filter
@@ -135,6 +144,8 @@ div
   float: left
   display: inline-block
   background-color: #fcefba
+  font-size: 12px
+  font-weight: normal
   span
     font-size: 9px
     float: right
@@ -694,7 +705,8 @@ li.current
 
 //**************************Home End**********************************************
 //***************************Gallery start ***************************************
-
+span.highlight
+  background-color: yellow
 .gallery
   float: left
   width: 130px
