--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,16 +1,18 @@
 - @response['response']['docs'].each do |doc|
   - @id = doc['vol_jobid']
-  - @title = doc['bok_title'][0]
   - @vol = Volume.find_by_job_id(doc['vol_jobid'])
-  - @highlight = @response['highlighting'][@id]
-  - thumb = ''
-  - if(@vol[:get_thumbnail_fail] == 0)
-    - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
-  - @doc = doc
-  - if(@view == 'gallery')                                      
-    = render :partial => "books/galleryresult"
-  - else
-    = render :partial => "books/listresult"
+  - if (@vol != nil) #check with Kamal why there is a "Test book in solr"
+    - @highlight = @response['highlighting'][@id.to_s]
+    - @title = doc['bok_title'][0]
+    - #@title = (@highlight != nil && @highlight['bok_title'] != nil) ? @highlight['bok_title'][0] : doc['bok_title'][0]
+    - thumb = ''
+    - if(@vol[:get_thumbnail_fail] == 0)
+      - @thumb = "volumes/#{@vol[:job_id]}/thumb.jpg"
+    - @doc = doc
+    - if(@view == 'gallery')                                      
+      = render :partial => "books/galleryresult"
+    - else
+      = render :partial => "books/listresult"
 - if(!((@page == @lastPage && @lastPage == 1) || @lastPage == 0))                          
   - @pages = adjustPaging(@page, @lastPage)              
   = render :partial => "books/paging"
