--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -42,6 +42,21 @@ a
   .username
     margin: 0px 10px
     float: right
+    ul
+      list-style: none
+      float: right
+      li:before
+        padding: 0 7px 0 0
+        font-size: 1.33em
+        vertical-align: -2px
+        content: "\2022\0000a0"
+        list-style: disc
+        color: #4c5155
+      li
+        display: inline
+        padding: 0 0 0 7px
+      li:first-of-type:before
+        display: none
   .topmenu
     a
       width: 100px
@@ -99,7 +114,10 @@ div
     width: 265px
     padding-bottom: 20px
     float: right
-
+  &.full_page
+    width: 980px
+    float: left
+    padding-top: 5px
 //********page title******
 
 .pagetitle
@@ -723,3 +741,98 @@ li.current
   font-weight: normal
   font-size: 12px
 //***************************Geographics End******************************************
+
+//***************************Form ********************************************************
+#login
+  display: none
+  z-index: 2
+  position: absolute
+  left: 1003px
+  top: 114px
+  width: 280px
+  height: 300px
+  border: 1px solid black
+  border-top: none
+  background-color: white
+
+.form
+  li
+    list-style: none
+  label
+    display: inline-block
+    padding-left: 10px
+    margin-left: -10px
+  label.required
+    background: url(image-path("/images_en/icon_required.png")) 0  no-repeat
+  input
+    width: 200px
+    border: 1px solid #f5d852
+    padding: 4px
+  li span
+    color: red
+    font-size: 12px
+  .btn
+    margin: 0px 5px
+    background: #699
+    padding: 4px
+    color: white
+    border: 0
+    width: 120px
+    &:hover
+      background: #FC0
+      cursor: pointer
+
+fieldset
+  border: 0
+  
+fieldset#errors
+  background: #ffeae6
+  border: 1px solid #f2d2cc
+  padding: 20px 0
+  margin: 0 0 20px 0
+  position: relative
+  
+fieldset#errors legend 
+  position: absolute
+  padding: 0 0 5px 0
+  left: 20px
+  background: transparent
+  font-weight: bold
+  display: block
+  
+form fieldset#errors ul
+  margin: 30px 20px 0 40px
+  
+
+.error
+  color: red
+  
+// flash design
+.flashtitle
+  min-height: 30px
+  display: block
+
+.flashtitlecontent
+  background-color: #ffeae6
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #f2d2cc
+  
+
+.flashtitleborder
+  padding: 10px
+  text-align: center
+  font-weight: bold
+  
+// For best in place edit
+.best_in_place
+  padding: .1m
+  cursor: hand
+  cursor: pointer
+  -moz-border-radius: 5px
+  -webkit-border-radius: 5px
+  -o-border-radius: 5px
+  -ms-border-radius: 5px
+  -khtml-border-radius: 5px
+  border-radius: 5px
+
