--- a/app/views/layouts/geographics.html.haml
+++ b/app/views/layouts/geographics.html.haml
@@ -1,4 +1,5 @@
 = render :partial => "layouts/header"
+= render :partial => "layouts/flash", object: flash
 .pagetitle
   .pagetitlecontent
     .pagetitleborder
