add highlight code

--- a/app/views/books/_booknames.html.haml
+++ b/app/views/books/_booknames.html.haml
@@ -6,10 +6,11 @@
   });
 
 - names = fillResponseArrays(@doc, @highlight, 'name', @id)
+- count = 0
 - names.each do |curname|
-  - name = Name.find_by_string(curname.gsub(HLPOST, '').gsub(HLPRE, ''))
+  - name = Name.find_by_string(curname.gsub(HLPRE, '').gsub(HLPOST, ''))
   -if (name != nil)     
     &bull;
     %a.tooltip{:title =>name_tip(name.id, name.string, name.eol_thumb, name.eol_page_id), :href => "#"}  
-      = item_count_format('name', name.string)
+      = item_count_format_highlight('name', name.string, curname)
 = book_names_count_format(@id)
