--- a/app/views/users/forgot_password.html.haml
+++ b/app/views/users/forgot_password.html.haml
@@ -1,2 +1,11 @@
-<h1>Users#forgot_password</h1>
-<p>Find me in app/views/users/forgot_password.html.erb</p>
+.form
+  = form_for :user, :url => users_recover_password_path, :builder => FormHelper::BHLFormBuilder do |f|
+    = I18n.t :forget_password_message
+    %ul
+      %li
+        = f.label :email
+      %li
+        = f.text_field :email
+    %fieldset
+      = f.submit I18n.t('submit_buton'), :class => "btn"
+      = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
