--- a/app/views/users/login.html.haml
+++ b/app/views/users/login.html.haml
@@ -4,13 +4,16 @@
       = f.hidden_field :return_to, :value => params[:return_to]
     %ul
       %li
-        = f.label :username
+        = f.label :username, :class => 'required'
       %li
         = f.text_field :username
       %li
-        = f.label :password
+        = f.label :password, :class => 'required'
       %li
         = f.password_field :password, :maxlength => 16
+      %li
+        %br
+        = link_to I18n.t(:forgot_password_link), users_forgot_password_path
     %fieldset
       = f.submit I18n.t('submit_buton'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
