--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -812,13 +812,24 @@ form fieldset#errors ul
   min-height: 30px
   display: block
 
-.flashtitlecontent
+.flasherrortitlecontent
   background-color: #ffeae6
   width: 980px
   margin: 3px auto
   border: 1px solid #f2d2cc
   
+.flashwarningtitlecontent
+  background-color: #F4FFDB
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #CCF2CD
 
+.flashnoticetitlecontent
+  background-color: #D7FFCF
+  width: 980px
+  margin: 3px auto
+  border: 1px solid #C6EDBE
+  
 .flashtitleborder
   padding: 10px
   text-align: center
