dar commit -authentication

--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -1,6 +1,9 @@
-= render :partial => "books/tabs"
-%br
-- if @current == 'brief'
-  = render :partial => "books/brief"
+- if @current == 'read'
+  = render :partial => "books/read"
 - else
-  = render :partial => "books/format"
+  = render :partial => "books/tabs"
+  %br
+  - if @current == 'brief'
+    = render :partial => "books/brief"
+  - else
+    = render :partial => "books/format"
