--- a/app/views/books/_listresult.html.haml
+++ b/app/views/books/_listresult.html.haml
@@ -3,9 +3,8 @@
     {:controller => :books, :action => :show, :id => @vol[:job_id]}
 .newscontent
   .sidelinks
-    - # TODO: this link should go to viewer
     = link_to image_tag("/images_#{I18n.locale}/read.png", :width => 32, :height => 21, :alt => "read", :title => "read") , 
-    {}
+    {:controller => :books, :action => :show, :id => @vol[:job_id], :tab => :read}
     = link_to image_tag("/images_#{I18n.locale}/learn.png", :width => 32, :height => 21, :alt => "details", :title => "details") , 
     {:controller => :books, :action => :show, :id => @vol[:job_id]}
   %h4
