--- a/app/views/books/_tabs.html.haml
+++ b/app/views/books/_tabs.html.haml
@@ -2,7 +2,7 @@
   .box_1
     .bookimage{:align => "center"}
       =image_tag "/#{@thumb}"
-      =link_to I18n.t(:read_book_link), '#'
+      =link_to I18n.t(:read_book_link), "/books/#{params[:id]}/read"
 .page
   .page_border
     .tabcontent
