--- a/app/views/users/reset_password.html.haml
+++ b/app/views/users/reset_password.html.haml
@@ -7,11 +7,11 @@
       %li
         = f.label :password, :class => 'required'
       %li
-        = f.password_field :password, :maxlength => 16
+        = f.password_field :entered_password, :maxlength => 16
       %li
         = f.label :confirm_password, raw(t('confirm_password')), :class => 'required'
       %li
-        = f.password_field :password_confirmation, { :maxlength => 32 }
+        = f.password_field :entered_password_confirmation, { :maxlength => 32 }
     %fieldset
       = f.submit I18n.t('submit_buton'), :class => "btn"
       = f.submit I18n.t('clear_button'), :class => "btn", :type => "reset"
