--- a/app/views/books/_booknames.html.haml
+++ b/app/views/books/_booknames.html.haml
@@ -11,6 +11,6 @@
   - name = Name.find_by_string(curname.gsub(HLPRE, '').gsub(HLPOST, ''))
   -if (name != nil)
     &bull;
-    %a.tooltip{:title =>name_tip(name.id, name.string, name.eol_thumb, name.eol_page_id), :href => "#"}
+    %a.tooltip{:title =>name_tip(@id, name.id, name.string, name.eol_thumb, name.eol_page_id), :href => "#"}
       = item_count_format_highlight('name', name.string, curname)
 = book_names_count_format(@id)
