commit initial code of history page

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -309,6 +309,12 @@ a.button
   float: left
   margin: 0px 10px 10px 0px
   border-top: 5px solid #ffcc00
+  
+.visitedthumb
+  float: left
+  margin: 0px 10px 10px 0px
+  border-top: 5px solid #ffcc00
+  opacity: 0.4
 
 Div.separator
   border-bottom: 1px dotted #cdcdcd
@@ -320,6 +326,12 @@ Div.separator
   margin-left: 10px
   img
     margin: 5px 5px
+    a
+      border: 0px
+  .dim
+    img
+    margin: 5px 5px
+    opacity: 0.4
     a
       border: 0px
 
