--- a/app/views/books/_listresult.html.haml
+++ b/app/views/books/_listresult.html.haml
@@ -1,6 +1,13 @@
-.thumb
-  = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) , 
+- if visited_volume?(@user_history, @vol)
+  .visitedthumb
+    = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) + "Watched" , 
     {:controller => :books, :action => :show, :id => @vol[:job_id]}
+   
+- else
+  .thumb
+    = link_to image_tag("/#{@thumb}", :width => 109, :border => 0) , 
+    {:controller => :books, :action => :show, :id => @vol[:job_id]}
+
 .newscontent
   .sidelinks
     = link_to image_tag("/images_#{I18n.locale}/read.png", :alt => "read", :title => "read") , 
