--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,20 +1,7 @@
-%b
-  = I18n.t(:real_name)
+= render :partial => "users/tabs"
 %br
-= best_in_place_if @can_edit, @user, :real_name, :type => :input
-%br
-%br
-%b
-  = I18n.t(:member_since)
-%br
-= @user.created_at.to_s
-%br
-%br
-%b
-  = I18n.t(:last_login)
-%br
-= @user.last_login.to_s
-%br
-%br
-- if session["user_id"] == @user.id
-  = link_to I18n.t(:modify_profile), :controller => :users ,:action => :edit, :id => @user.id
+- if @current == 'history'
+  = render :partial => "users/user_history"
+- else
+  = render :partial => "users/user_profile"  
+
