--- a/app/views/layouts/books.html.haml
+++ b/app/views/layouts/books.html.haml
@@ -4,21 +4,21 @@
     .pagetitleborder
       %h1
         .searchtitle
-          Search by: 
-          =render :partial => "books/fields"
+          = I18n.t(:search_by) 
+          = render :partial => "books/fields"
         .searchfilter
-          =render :partial => "books/breadcrumb"
+          = render :partial => "books/breadcrumb"
         .clear
 = render :partial => "layouts/flash", object: flash
 .contents
   .r_column
-    =render :partial => "books/right_column"
+    = render :partial => "books/right_column"
   .page
     - if (@response != '' && @response['response']['numFound'] > 0)
-      =render :partial => "books/numfound"
+      = render :partial => "books/numfound"
       .page_border
         %br
         = yield
     - else
-      No Books Found
+      = I18n.t(:no_books_found)
 = render :partial => "layouts/footer"
