BHL_98 initial commit

--- a/app/views/books/_brief.html.haml
+++ b/app/views/books/_brief.html.haml
@@ -33,4 +33,5 @@
       %b
         =I18n.t(:book_name_title) + ':'
       = render :partial => "books/names"
+      = render :partial => "books/add_book"
       
